// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render Expenses Summary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totaling 
    $15.00
  </h1>
</div>
`;

exports[`Should correctly render Expenses Summary with multiple expenses 1`] = `
<div>
  <h1>
     Viewing 
    3
     
    expenses
     totaling 
    $615.00
  </h1>
</div>
`;
